fix consent text out of screen

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -233,3 +233,8 @@ input[type='number'] {
   top: 0px;
   z-index: -1;
 }
+
+br {
+  display: block;
+  margin-top: 10px;
+}
